# maatml

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  flow-ml.md  index.html  maatml.md  mkdocs.yml  pyproject.toml  requirements-base.txt  requirements-ml.txt  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  plugin_request.md
.github/workflows/: ci.yml  publish.yml
docs/: GO_PUBLIC.md  Implementation_and_Training_Plan.md  flow_inference_model_training_instructions.md  flywheel.md  getting-started.md  index.md  lifecycle.md  plugins.md  serving.md
docs/examples/: index.md  jcl-validator.md  spool-interpreter.md  support-ticket-triage.md  vision-describer.md  vision-vlm.md  vision.md
examples/jcl-validator/: README.md  model.yml  training_instructions.md
examples/jcl-validator/datasets/: jcl_validation_schema.json  label_taxonomy.md  node_contracts.json  prompt_spec.json  tokenizer.json
examples/jcl-validator/jcl_plugin/: COLUMN_RULES.md  __init__.py  datagen.py  generator.py  metrics.py  predictor.py  sanitization.yaml  schemas.py  tokenizer.py  validator.py
examples/jcl-validator/scripts/: build_seeds.py  build_tokenizer.py
examples/jcl-validator/tests/: conftest.py  test_jcl_schemas.py  test_tokenizer.py
examples/spool-interpreter/: README.md  model.yml  training_instructions.md
examples/spool-interpreter/datasets/: node_contracts.json  spool_interpretation_schema.json
examples/spool-interpreter/scripts/: build_seeds.py
examples/spool-interpreter/spool_plugin/: __init__.py  generator.py  metrics.py  sanitization.yaml  schemas.py  validator.py
examples/spool-interpreter/tests/: test_spool_schemas.py
examples/support-ticket-triage/: README.md  model.yml
examples/support-ticket-triage/datasets/: prompt_spec.json  schema.json
examples/support-ticket-triage/tests/: conftest.py  test_triage.py
examples/support-ticket-triage/triage_plugin/: __init__.py  constants.py  metrics.py  validator.py
examples/vision/: README.md  model.yml
examples/vision-describer/: README.md  model.yml  training_instructions.md
examples/vision-describer/datasets/: node_contracts.json  prompt_spec.json  schema.json
examples/vision-describer/scripts/: build_seeds.py  compose_client.py
examples/vision-describer/tests/: conftest.py  test_vision_describer.py
examples/vision-describer/vision_describer_plugin/: __init__.py  constants.py  describe.py  generator.py  linearize.py  metrics.py  schemas.py  validator.py
examples/vision-vlm/: README.md  model.yml
examples/vision-vlm/datasets/: prompt_spec.json  schema.json
examples/vision-vlm/scripts/: build_seeds.py  client_openai.py  serve_vllm.sh
examples/vision-vlm/tests/: conftest.py  test_vision_vlm.py
examples/vision-vlm/vlm_plugin/: __init__.py  constants.py  datagen.py  describe.py  metrics.py  predictor.py  scaffold.py  trainer.py  validator.py
examples/vision/datasets/: schema.json
examples/vision/scripts/: build_seeds.py
examples/vision/tests/: conftest.py  test_vision.py
examples/vision/vision_plugin/: __init__.py  constants.py  datagen.py  dataset.py  decode.py  export_onnx.py  metrics.py  model.py  predictor.py  scaffold.py  synth.py  trainer.py  validator.py
lifecycle/: index.html
models/agent-planner/: README.md  model.yml
models/agent-planner/datasets/: prompt_spec.json  schema.json
models/dsl-generator/: README.md  model.yml
models/dsl-generator/datasets/: grammar.md  prompt_spec.json  schema.json
models/flow-graph-generator/: README.md  model.yml  training_instructions.md
models/flow-graph-generator/datasets/: flow_graph_schema.json  intent_aliases.json  node_contracts.json  prompt_spec.json
models/jcl-validator/: README.md  model.yml  training_instructions.md
models/jcl-validator/datasets/: jcl_validation_schema.json  node_contracts.json  prompt_spec.json  schema.json
models/spool-interpreter/: README.md  model.yml  training_instructions.md
models/spool-interpreter/datasets/: label_taxonomy.md  node_contracts.json  prompt_spec.json  schema.json  spool_interpretation_schema.json
plugins/: index.html
scripts/: build_flow_graph_seeds.py  build_jcl_seeds.py  build_spool_seeds.py  debug_fgg_loss.py  evaluate_all.py  evaluate_models.py  expand_eval_samples.py  expand_seed_samples.py  expand_spool_smart_restart_samples.py  package_all.py  package_model.py  prepare_dataset.py  sync-spec-from-flow-starter.sh  sync-spec-from-flow-studio.sh  train_all.py  train_dsl_generator.py  train_jcl_validator.py  train_spool_interpreter.py  validate_repo.py
search/: search_index.json
serving/: index.html
src/flow_ml/: __init__.py  cli.py  config.py  device.py  registry.py  scaffold.py
src/flow_ml/contrib/: __init__.py
src/maatml/: __init__.py  cli.py  config.py  device.py  doctor.py  lifecycle.py  overrides.py  registry.py  runs.py  scaffold.py  serve.py
tests/: conftest.py  test_agent_planner.py  test_cli.py  test_datagen.py  test_device.py  test_distill.py  test_docs_truth.py  test_dsl_generator_pipeline.py  test_eval_gates.py  test_eval_report.py  test_export.py  test_flow_dsl_py.py  test_flow_graph_pipeline.py  test_flow_graph_validator.py  test_formats.py  test_gate_enforcement.py  test_gated.py  test_gguf_convert.py  test_graph_diff.py  test_group_split.py  test_guards.py  test_ingest.py  test_jcl_collator.py  test_jcl_generator.py  test_jcl_model.py  test_jcl_tokenizer.py  test_lifecycle.py  test_manifest.py  test_overrides.py  test_packaging.py  test_pipeline.py  test_preference.py  test_quantization.py  test_registry.py  test_revision.py  test_runs.py  test_sanitizer.py  test_scaffold.py  test_schemas.py  test_serve.py  (+5 more)
(+102 files in other folders)
