[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maatml"
version = "0.5.1"
description = "A machine learning models framework from experimentation to production: data, training, evaluation, export, and deploy pipelines for small task-specific language models"
readme = "README.md"
keywords = [
  "fine-tuning", "llm", "vlm", "lora", "qlora", "peft",
  "small-language-models", "apple-silicon", "mps", "onnx", "vllm",
  "mlops", "machine-learning", "pytorch", "transformers", "cli",
  "edge-ai", "synthetic-data", "structured-output", "validator",
]
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Nedal Elghamry" }
]
urls = { Homepage = "https://maatml.pages.dev", Documentation = "https://maatml.pages.dev", Repository = "https://github.com/moralfish/maatml", Changelog = "https://github.com/moralfish/maatml/blob/main/CHANGELOG.md" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
  "jsonschema>=4.0"
]

[project.scripts]
# Console-script entry point so `maatml <cmd>` works from any shell after
# `pip install maatml`.  Equivalent to `python -m maatml.cli <cmd>`.
maatml = "maatml.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]
ml = [
  "torch>=2.3",
  "transformers>=5.0",
  "datasets>=2.19",
  "evaluate>=0.4",
  "tokenizers>=0.19",
  "safetensors>=0.4",
  "accelerate>=0.30",
  "peft>=0.10",
  "sentencepiece>=0.2"
]
cuda = [
  # QLoRA / bitsandbytes: CUDA Linux only (not macOS / MPS). Also install [ml].
  "bitsandbytes>=0.43",
]
pref = [
  # DPO / ORPO via TRL. Also install [ml].
  "trl>=0.9",
]
teacher = [
  # OpenAI-compatible teacher client for maatml datagen --teacher.
  "httpx>=0.27",
]
docs = [
  # Optional docs site: mkdocs serve
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]
vision = [
  # Multitask vision (classification / detection / pose) + ONNX export.
  # Also install [ml].
  "torchvision>=0.18",
  "pillow>=10.0",
  "onnx>=1.16",
  "onnxscript>=0.1.0",
  "onnxruntime>=1.18",
]
vllm = [
  # OpenAI-compatible VLM serving for examples/vision-vlm.
  # Linux-only (use the nvidia-ai-iot container on Jetson).
  "vllm>=0.10; platform_system=='Linux'",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.exclude-package-data]
"*" = ["**/__pycache__/*", "**/*.py[cod]"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests", "examples"]
